# sphinx-ebnf-grammar

./: LICENSE  README.md  pyproject.toml
sphinx_ebnf_grammar/: __about__.py  __init__.py  directives.py
